edit tarefa 3 CSS

--- a/tarefa-3/index.html
+++ b/tarefa-3/index.html
@@ -1,10 +1,3 @@
-<!--
-- Usar display flex.
-- Usar CSS externo.
-- Ser responsivo conforme as imagens.
-- Tentar fazer o mais parecido possível com as imagens: assets/tela1.png e assets/tela2.png
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -53,7 +46,7 @@
           <div class="cards">
             <div class="card">
               <div class="card-body">
-                <p class="title">Esportes</p>
+                <p class="card-title">Esportes</p>
                 <i class="icon-futbol-o"></i>
                 <button>Votar</button>
               </div>
@@ -61,7 +54,7 @@
     
             <div class="card">
               <div class="card-body">
-                <p class="title">Simulação</p>
+                <p class="card-title">Simulação</p>
                 <i class="icon-plane"></i>
                 <button>Votar</button>
               </div>
@@ -69,7 +62,7 @@
     
             <div class="card">
               <div class="card-body">
-                <p class="title">Estratégia</p>
+                <p class="card-title">Estratégia</p>
                 <i class="icon-group"></i>
                 <button>Votar</button>
               </div>
