--- a/tarefa-1/index.html
+++ b/tarefa-1/index.html
@@ -1,9 +1,3 @@
-<!-- 
-- Usando display flex, crie um HTML/CSS para a imagem: https://miro.medium.com/max/1838/1*ia4V5qfk6Ki3iWIn-SmErw.png
-
-- Tutorial Flex: https://www.alura.com.br/artigos/css-guia-do-flexbox?gclid=EAIaIQobChMI4MDjweuB9gIVyICRCh3_YgvDEAAYAiAAEgKNLPD_BwE
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,9 +15,13 @@
 
   <body>
     <div class="container">
+
+      <!-- ========== HEADER ========== -->
       <header id="header" class="box center">Header</header>
 
+      <!-- ========== MAIN ========== -->
       <main class="flex-container">
+        
         <aside id="aside" class="box center">Aside</aside>
 
         <article id="article" class="box">
@@ -39,6 +37,7 @@
         </article>
       </main>
 
+      <!-- ========== FOOTER ========== -->
       <footer id="footer" class="box center">Footer</footer>
     </div>
   </body>
