--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
               </a>
             </p>
 
-            <a href="tarefa-1/tarefa-1.html" class="button" target="_blank">Abrir</a>
+            <a 
+              href="https://rogeriofrsouza.github.io/fatec-eletiva-web-2022/tarefa-1/tarefa-1.html" 
+              class="button" 
+              target="_blank"
+            >
+              Abrir
+            </a>
           </div>
         </div>
 
@@ -59,7 +65,13 @@
               <a href="/tarefa-2/assets/tela2.png" target="_blank">Tela 2</a>
             </div>
                        
-            <a href="tarefa-2/tarefa-2.html" class="button" target="_blank">Abrir</a>      
+            <a 
+              href="https://rogeriofrsouza.github.io/fatec-eletiva-web-2022/tarefa-2/tarefa-2.html" 
+              class="button" 
+              target="_blank"
+            >
+              Abrir
+            </a>      
           </div>
         </div>
       </div>
