edit css, js, html

--- a/tarefa-5/tarefa-5.html
+++ b/tarefa-5/tarefa-5.html
@@ -135,7 +135,7 @@
                   step="1" 
                   min="0" 
                   max="" 
-                  id="2" 
+                  id="3" 
                   name="quantity" 
                   value="0" 
                   title="Qty"
@@ -170,7 +170,7 @@
                   step="1" 
                   min="0" 
                   max="" 
-                  id="1" 
+                  id="4" 
                   name="quantity" 
                   value="0" 
                   title="Qty"
@@ -197,7 +197,7 @@
                   step="1" 
                   min="0" 
                   max="" 
-                  id="1" 
+                  id="5" 
                   name="quantity" 
                   value="0" 
                   title="Qty"
@@ -224,7 +224,7 @@
                   step="1" 
                   min="0" 
                   max="" 
-                  id="1" 
+                  id="6" 
                   name="quantity" 
                   value="0" 
                   title="Qty"
@@ -244,7 +244,7 @@
       <section class="section" id="dados-pessoais">
         <h2>Dados pessoais</h2>
 
-        <input type="text" id="nome" placeholder="Digite o seu nome" />
+        <input type="text" id="name" placeholder="Digite o seu nome" />
         <input type="text" id="phone" placeholder="Digite o seu telefone" />
         <input type="text" id="email" placeholder="Digite o seu email" />
 
@@ -252,9 +252,7 @@
       </section>
 
       <!-- ========== OUTPUT ==========-->
-      <div id="output">
-
-      </div>
+      <div id="output"></div>
     </div>
 
     <!-- JS -->
