--- a/tarefa-6/index.html
+++ b/tarefa-6/index.html
@@ -54,15 +54,15 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Cardápios</a>
+              <a class="nav-link liveToastBtn" href="#">Cardápios</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Reservas</a>
+              <a class="nav-link liveToastBtn" href="#">Reservas</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
+              <a class="nav-link liveToastBtn" href="#">Contato</a>
             </li>
           </ul>
 
@@ -82,6 +82,8 @@
 
     <!-- ========== CAROUSEL ==========-->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+
+      <!-- Carousel buttons -->
       <div class="carousel-indicators">
         <button
           type="button"
@@ -108,8 +110,9 @@
         </button>
       </div>
       
+      <!-- Carousel imgs -->
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active" data-bs-interval="5000">
           <img src="assets/imgs/food-1.jpg" class="d-block w-100" alt="food-1" />
           
           <div class="carousel-caption d-none d-md-block">
@@ -118,7 +121,7 @@
           </div>
         </div>
 
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="5000">
           <img src="assets/imgs/food-2.jpg" class="d-block w-100" alt="food-2" />
 
           <div class="carousel-caption d-none d-md-block">
@@ -127,7 +130,7 @@
           </div>
         </div>
 
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="5000">
           <img src="assets/imgs/food-3.jpg" class="d-block w-100" alt="food-3" />
 
           <div class="carousel-caption d-none d-md-block">
@@ -137,6 +140,7 @@
         </div>
       </div>
 
+      <!-- Prev button -->
       <button
         class="carousel-control-prev"
         type="button"
@@ -147,6 +151,7 @@
         <span class="visually-hidden">Previous</span>
       </button>
 
+      <!-- Next button -->
       <button
         class="carousel-control-next"
         type="button"
@@ -158,15 +163,16 @@
       </button>
     </div>
 
-    <h1 class="text-center mt-3">Menu: Faça a sua escolha!</h1>
+    <!-- ========== TITLE ==========-->
+    <h1 class="text-center mt-2">Menu - Faça a sua escolha!</h1>
 
     <!-- ========== PRATO PRINCIPAL ==========-->
-    <div class="row">
-      <h2 class="text-center mt-3">Prato principal</h2>
-      <p class="text-center">Todos os pratos acompanham arroz, feijão e a sobremesa do dia</p>
+    <div class="row text-center mt-5">
+      <h2>Prato principal</h2>
+      <p>Todos os pratos acompanham arroz, feijão e a sobremesa do dia</p>
     </div>
 
-    <div class="row justify-content-center gap-5">
+    <div class="row justify-content-center gap-5 mb-2">
       <div class="card col-3">
         <img src="assets/imgs/bife-com-batata.jpg" alt="Bife com batata" class="card-img-top" />
         <div class="card-body">
@@ -243,12 +249,12 @@
     </div>
 
     <!-- ========== ACOMPANHAMENTOS ==========-->
-    <div class="row">
-      <h2 class="text-center mt-3">Acompanhamentos</h2>
-      <p class="text-center">Porçoes para uma pessoa</p>
+    <div class="row text-center mt-5">
+      <h2>Acompanhamentos</h2>
+      <p>Porções para uma pessoa</p>
     </div>
 
-    <div class="row justify-content-center gap-5">
+    <div class="row justify-content-center gap-5 mb-2">
       <div class="card col-3">
         <img src="assets/imgs/farofa.png" alt="Farofa" class="card-img-top" />
         <h3 class="card-body text-center">Farofa</h3>
@@ -323,9 +329,10 @@
     </div>
 
     <!-- ========== DADOS PESSOAIS ==========-->
-    <div class="shadow p-3 mb-5 bg-body rounded container mt-3">
+    <div class="dados-pessoais shadow p-5 mb-5 bg-body rounded mt-5">
       <h2>Dados pessoais</h2>
 
+      <label for="name" class="form-label mt-4">Nome</label>
       <input
         class="form-control"
         type="text"
@@ -334,34 +341,42 @@
         aria-label="default input example"
       />
 
-      <input
-        class="form-control"
-        type="text"
-        id="phone"
-        placeholder="Digite o seu telefone"
-        aria-label="default input example"
-      />
+      <div class="row">
+        <div class="col-lg-6 mt-4">
+          <label for="phone" class="form-label">Telefone</label>
+          <input
+            class="form-control"
+            type="text"
+            id="phone"
+            placeholder="Digite o seu telefone"
+            aria-label="default input example"
+          />
+        </div>
 
-      <input
-        class="form-control"
-        type="text"
-        id="email"
-        placeholder="Digite o seu email"
-        aria-label="default input example"
-      />
+        <div class="col-lg-6 mt-4">
+          <label for="email" class="form-label">Email</label>
+          <input
+            class="form-control"
+            type="text"
+            id="email"
+            placeholder="Digite o seu email"
+            aria-label="default input example"
+          />
+        </div>
+      </div>
 
       <button
-        class="btn btn-primary"
+        class="btn btn-primary mt-4"
         onclick="calcular()"
         data-bs-toggle="modal"
-        data-bs-target="#modalexemplo"
+        data-bs-target="#modalOutput"
       >
         Calcular
       </button>
     </div>
 
     <!-- ========== MODAL ========== -->
-    <div class="modal" tabindex="-1" id="modalexemplo">
+    <div class="modal" tabindex="-1" id="modalOutput">
       <div class="modal-dialog">
         <div class="modal-content">
 
@@ -380,13 +395,28 @@
 
           <!-- Modal body -->
           <div class="modal-body">
-            <p id="output">Selecione pelo menos um prato</p>
+            <p id="output">Selecione pelo menos um prato!</p>
           </div>
 
           <!-- Modal footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Voltar</button>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ========== TOAST ========== -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+
+        <div class="toast-header">
+          <strong class="me-auto">Erro :(</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+
+        <div class="toast-body">
+          Em construção, volte para a tela anterior!
         </div>
       </div>
     </div>
@@ -396,6 +426,7 @@
     <script src="js/quantity/jquery-3.6.0.min.js"></script>
     <script src="js/quantity/quantity.js"></script>
 
+    <!-- Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
