Ajustes projetos Angular

--- a/index.html
+++ b/index.html
@@ -21,63 +21,78 @@
     <main id="main">
 
       <!-- Tarefas -->
-      <ul class="tasks">
+      <ul class="menu">
 
         <!-- Tarefa 2 -->
-        <li class="task-item">
-          <a 
-            href="tarefa-2/tarefa-2.html" 
-            class="link" 
-            target="_blank"
-          >
+        <li class="menu-item">
+          <a href="tarefas/tarefa-2/tarefa-2.html" class="link" target="_blank">
             Tarefa 2
           </a>
         </li>
 
         <!-- Tarefa 3 -->
-        <li class="task-item">
-          <a 
-            href="tarefa-3/tarefa-3.html" 
-            class="link" 
-            target="_blank"
-          >
+        <li class="menu-item">
+          <a href="tarefas/tarefa-3/tarefa-3.html" class="link" target="_blank">
           Tarefa 3
           </a>
         </li>
 
         <!-- Tarefa 4 -->
-        <li class="task-item">
-          <a 
-            href="tarefa-4/tarefa-4.html" 
-            class="link" 
-            target="_blank"
-          >
+        <li class="menu-item">
+          <a href="tarefas/tarefa-4/tarefa-4.html" class="link" target="_blank">
           Tarefa 4
           </a>
         </li>
 
         <!-- Tarefa 5 -->
-        <li class="task-item">
-          <a 
-            href="tarefa-5/tarefa-5.html" 
-            class="link" 
-            target="_blank"
-          >
+        <li class="menu-item">
+          <a href="tarefas/tarefa-5/tarefa-5.html" class="link" target="_blank">
           Tarefa 5
           </a>
         </li>
 
         <!-- Tarefa 6 -->
-        <li class="task-item">
-          <a 
-            href="tarefa-6/tarefa-6.html" 
-            class="link" 
-            target="_blank"
-          >
+        <li class="menu-item">
+          <a href="tarefas/tarefa-6/tarefa-6.html" class="link" target="_blank">
           Tarefa 6
           </a>
         </li>
       </ul>
+
+      <!-- Projetos Angular 
+      <ul class="menu">
+
+        <li class="menu-item">
+          <a href="projetos-angular/cadastro-de-dogs/dist/cadastro-de-dogs/index.html" class="link" target="_blank">
+            Cadastro de dogs
+          </a>
+        </li>
+
+        <li class="menu-item">
+          <a href="projetos-angular/cadastro-de-estudante/dist/cadastro-de-estudante/index.html" class="link" target="_blank">
+            Cadastro de estudantes
+          </a>
+        </li>
+
+        <li class="menu-item">
+          <a href="projetos-angular/projeto-dogs/" class="link" target="_blank">
+            Projeto dogs
+          </a>
+        </li>
+
+        <li class="menu-item">
+          <a href="projetos-angular/prova-final-rogerio-ferreira/" class="link" target="_blank">
+            Prova final
+          </a>
+        </li>
+
+        <li class="menu-item">
+          <a href="projetos-angular/projeto-pla/frontend/" class="link" target="_blank">
+            Projeto PLA
+          </a>
+        </li>
+      </ul>
+      -->
     </main>
 
     <!-- ========== FOOTER ========== -->
